--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <div class="header myBlog">
             <header>
                 <h1>MyBlog</h1>
+                <h2>Titulo para probar PR</h2>
+                <p>Un p para probar PR</p>
                 <p>The Last Posts About Graphic And Web Design</p>
             </header>
         </div>
