--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <header>
                 <h1>MyBlog</h1>
                 <p>The Last Posts About Graphic And Web Design</p>
+                 <p>Probando el Fetch</p>
             </header>
         </div>
         <section class="foto-imagen">
