--- a/index.html
+++ b/index.html
@@ -33,20 +33,7 @@
         </div>
         <section class="foto-imagen">
 
-
-            <!-- Primer artículo con imagen y texto -->
-            <article>
-                <img src="static/img/imagen1.png"
-                    alt="Imagen sobre las diferencias entre el diseño gráfico y el diseño web">
-
-                <div>
-                    <p class="time"><time>09 March, 2020</time></p>
-                    <h2>What's The Difference Between Graphic And Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet, consecteteur adipisicing elit. Perferendis, soluta rerum molestias
-                        optio distinctio blanditiis cupiditate.</p>
-                    <a href="#" class="btn-custom">Read More</a>
-                </div>
-            </article>
+            <h1>Estamos a tope de power</h1>
 
             <!-- Segundo artículo con imagen y texto -->
             <article>
